# Self_Correcting_SQL_Agent

./: README.md  app.py  pyproject.toml  requirements.txt
artifacts/: metrics.json  sample_report.json
examples/: demo_questions.md
notebook/: README.md
screenshots/: README.md
src/sql_data_analyst/: __init__.py  agent.py  cli.py  config.py  data_loading.py  db_tools.py  modeling.py  prompts.py  safety.py  ui.py
